Simplify MeasureRepository interface